# Infrastructure-Monitoring-Toolkit

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.example.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
deploy/ansible/: ansible.cfg
deploy/ansible/inventory/: hosts.yml
deploy/ansible/playbooks/: configure_monitoring.yml  deploy_infraprobe.yml  setup_server.yml
deploy/helm/infraprobe/: Chart.yaml  values-production.yaml  values.yaml
deploy/kubernetes/: configmap.yml  deployment.yml  namespace.yml  networkpolicy.yml  service.yml  servicemonitor.yml
deploy/terraform/: providers.tf  versions.tf
docker/: .dockerignore  Dockerfile  Dockerfile.dev
docs/: architecture.md  configuration.md  deployment.md  development.md  networking-deep-dive.md
loadtest/: locustfile.py
monitoring/grafana/dashboards/: infraprobe-overview.json  network-metrics.json  system-metrics.json
monitoring/prometheus/: alert_rules.yml  prometheus.yml
scripts/: generate_sample_config.py  install.sh
src/infraprobe/: __init__.py  __main__.py  cli.py  config.py  logging_config.py
src/infraprobe/alerting/: __init__.py  notifiers.py  rules.py
src/infraprobe/logging_analysis/: __init__.py  analyzer.py  parser.py
src/infraprobe/metrics/: __init__.py  collector.py  prometheus_exporter.py
src/infraprobe/network/: __init__.py  bandwidth.py  dns_resolver.py  http_checker.py  (+3 more)
systemd/: infraprobe.service  infraprobe.timer
tests/: conftest.py
tests/unit/: test_alert_rules.py  test_analyzer.py  test_config.py  test_cpu.py  test_disk.py  test_dns_resolver.py  test_http_checker.py  test_icmp.py  test_memory.py  test_parser.py  test_process.py  test_prometheus_exporter.py  test_tcp.py  test_traceroute.py
(+48 files in other folders)
